:lipstick: mobile overflow fix

--- a/src/css/global/globalPortrait.css
+++ b/src/css/global/globalPortrait.css
@@ -2,6 +2,11 @@
 @import '../root.css';
 
 @media screen and (aspect-ratio < 1/1) {
+
+    * {
+        overflow: hidden;
+    }
+
     html, body {
         border: 0;
         margin: 0;
